@@ -13,6 +13,8 @@ Trunk -  Unreleased
 
     HIVE-1172. Add UDFS to create struct (Zheng Shao via Ning Zhang)
 
+    HIVE-894. add udaf max_n, min_n to contrib (Zheng Shao via Yongqiang He)
+
   IMPROVEMENTS
 
     HIVE-983. Function from_unixtime takes long.
